--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,10 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-
+    <form>action="/login" method="post"      
+    <br><lable > Username: <input type="text" name= "username"></lable>
+    <br><lable > Password: <input type="text" name= "password"></lable>
+      <input type="submit" id="login">
+    </form>
   </body>
 </html>
