--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -10,10 +10,11 @@
 
       <h1>Welcome <%= Helpers.current_user(session).username %></h1>
       <h3>Your Balance: <%= Helpers.current_user(session).balance %></h3>
+      <h4><a href="/logout">Log Out</a></h4>
     <% else %>
       <h1>You Must <a href="/">Log In</a> to View Your Balance</h1>
     <% end %>
-    <a href="/logout">Log Out</a>
+    <!--<a href="/logout">Log Out</a>-->
 
   </body>
 </html>
