--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,11 +10,13 @@
     <h3>Log In Please</h3>
 
     <form action="/login" method="post">
-      <label for="username">Username:</label>
-      <input type="text" name="username" id="username"><br><br>
-      <label for="password">Password:</label>
-      <input type="password" name="password" id="password"><br><br>
-      <input type="submit" value="submit">
+      <label for="username">Username: </label>
+      <input type="text" name="username">
+      <br>
+      <label for="password">Password: </label>
+      <input type="password" name="password">
+      <br>
+      <input type="submit" value="Log In">
     </form>
 
   </body>
