--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,12 +11,12 @@
 
     <form action="/login" method="post">
       <label for="username">Username: </label>
-      <input type="text" name="username">
+      <input type="text" name="username"/>
       <br>
       <label for="password">Password: </label>
-      <input type="password" name="password">
+      <input type="password" name="password"/>
       <br>
-      <input type="submit" value="Log In">
+      <input type="submit" value="Log In"/>
     </form>
 
   </body>
